# quantum

./: .gitignore  MINER_FAQ.md  README.md  SETUP_GUIDE.md  gpu-reset-and-exec.sh  min_compute.yml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
dev_tools/: README.md  requirements.txt
neurons/: miner.py  validator.py
qbittensor/: __init__.py  mock.py  protocol.py
qbittensor/api/: get_query_axons.py
qbittensor/base/: miner.py  neuron.py  validator.py
qbittensor/common/: certificate.py  compression.py
qbittensor/hashing/: sign_message.py
qbittensor/miner/: __init__.py  config.py  extract.py  miner.py  (+2 more)
qbittensor/validator/peaked_circuit_creation/: .gitignore  main.py  pyproject.toml  quimb_cache_utils.py
qbittensor/validator/peaked_circuit_creation/lib/: base_cache.py  circuit.py  circuit_gen.py  circuit_gen_dev.py  obfuscate.py  verification.py
qbittensor/validator/peaked_circuit_creation/lib/decompose/: __init__.py  cnots.py  ising.py
qbittensor/validator/peaked_circuit_creation/peaked_circuits/: circuits.py  functions.py  requirements.txt
qbittensor/validator/peaked_circuit_creation/src/: __init__.py  full_gen_test.py  gate_gen_test.py  gate_optim_test.py  gen_circuits.py  state_evolve_test.py  sv_solve_test.py  threshold_test.py  threshold_test_plot.py  tiling_test.py
qbittensor/validator/peaked_circuit_creation/src/lib/: __init__.py  circuit.py  circuit_gen.py  circuit_meta.py  optim.py
qbittensor/validator/peaked_circuit_creation/src/lib/decompose/: __init__.py  cnots.py  ising.py
tests/: conftest.py
(+219 files in other folders)
