[project]
name = "lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [ ]
requires-python = ">=3.12"
dependencies = [
    "kahypar>=1.3.5",
    "lmfit",
    "matplotlib==3.8.3",
    "numba==0.59.1",
    "numpy>1.23.5",
    "optuna>=4.3.0",
    "pytest==8.1.1",
    "qiskit",
    "qiskit_aer",
    "quimb==1.7.3",
    "scipy==1.11.2",
    "torch==2.2.1",
    "torch_optimizer==0.3.0",
    "tqdm==4.66.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
